infra/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: mazenelsayad1234.azurecr.io/backend:d8d715dd276e94d7a74d66c62b055d88b7bdd29f
        ports:
        - containerPort: 3000
